--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,22 @@ body {
   font-size: 7.5vmin;
 }
 
+.btn{
+  color: white;
+  background-color: #6200EE;
+  border: none;
+  outline: none;
+  /* padding: 5px 10px; */
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+.btn:hover{
+  filter: brightness(1.3);
+}
+
 #webcamButton.hide{
   display: none;
 }
